Package renaming file paths add