@@ -1,19 +1,20 @@
 package com.snjdigitalsolutions.lablensfx.nodes;
 
+import com.snjdigitalsolutions.lablensfx.orm.ComputeResource;
 import com.snjdigitalsolutions.lablensfx.orm.ConfigurationPath;
+import com.snjdigitalsolutions.lablensfx.repository.ComputeResourceRepository;
+import com.snjdigitalsolutions.lablensfx.state.ComputeResourceState;
 import com.snjdigitalsolutions.lablensfx.utility.FilePathValidator;
 import com.snjdigitalsolutions.springbootutilityfx.node.SpringInitializableNode;
 import com.snjdigitalsolutions.springbootutilityfx.node.utility.AlertUtility;
 import com.snjdigitalsolutions.springbootutilityfx.node.utility.NodeLoader;
-import javafx.beans.property.SimpleStringProperty;
-import javafx.beans.value.ObservableValue;
 import javafx.collections.FXCollections;
 import javafx.fxml.FXML;
 import javafx.scene.control.*;
 import javafx.scene.layout.AnchorPane;
-import javafx.util.Callback;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.Resource;
+import org.springframework.lang.NonNull;
 import org.springframework.stereotype.Component;
 
 @Component
@@ -31,62 +32,101 @@ public class ConfigurationPane extends AnchorPane implements SpringInitializable
     private final double splitPaneDividerPosition = 0.5;
     private final FilePathValidator filePathValidator;
     private final AlertUtility alertUtility;
+    private final ComputeResourceState computeResourceState;
+    private final ComputeResourceRepository computeResourceRepository;
 
-    public ConfigurationPane(@Value("classpath:/fxml/ConfigurationPane.fxml") Resource fxml, FilePathValidator filePathValidator, AlertUtility alertUtility) {
+    public ConfigurationPane(@Value("classpath:/fxml/ConfigurationPane.fxml") Resource fxml,
+                             FilePathValidator filePathValidator,
+                             AlertUtility alertUtility,
+                             ComputeResourceState computeResourceState,
+                             ComputeResourceRepository computeResourceRepository) {
         this.filePathValidator = filePathValidator;
         this.alertUtility = alertUtility;
+        this.computeResourceState = computeResourceState;
+        this.computeResourceRepository = computeResourceRepository;
         NodeLoader.load(fxml, this);
     }
 
     @Override
     public void performIntialization() {
+        initializeDivider();
+        initializeAddButton();
+        initializePathTable();
+    }
+
+    public void loadExistingPaths() {
+        if (computeResourceState.getSelectedResources().size() == 1){
+            selectedPathsTable.getItems().clear();
+            computeResourceState.getSelectedResources().getFirst().getConfigurationPaths().forEach(path -> {
+                selectedPathsTable.getItems().add(path);
+            });
+        } else {
+            alertUtility.warningAlert("No Selection", "No compute resource is selected");
+        }
+    }
+
+    private void initializeDivider() {
         splitPane.getDividers()
-                .get(0)
+                .getFirst()
                 .positionProperty()
                 .addListener((obj, oldVal, newVal) -> {
                     if (newVal.doubleValue() != splitPaneDividerPosition) {
                         splitPane.setDividerPosition(0, splitPaneDividerPosition);
                     }
                 });
+    }
+
+    private void initializeAddButton() {
         addButton.setOnAction(event -> {
-            if (filePathValidator.isValid(filePathTextField.getText())) {
-                ConfigurationPath newPath = new ConfigurationPath();
-                newPath.setConfigurationPath(filePathTextField.getText());
-                selectedPathsTable.getItems().add(newPath);
-            } else {
-                alertUtility.warningAlert("Invalid Path", "The path entered is not a valid system path.");
-            }
-        });
-
-
-        TableColumn<ConfigurationPath, String> pathColumn = new TableColumn<>("Path");
-        pathColumn.setCellValueFactory(path -> path.getValue().pathProperty());
-
-        pathColumn.setCellFactory(col -> new TableCell<ConfigurationPath, String>() {
-            private final Label pathLabel = new Label();
-
-//                {
-//                    // Constructor block — runs once per cell instance
-//                    pathLabel.getStyleClass().add("status-badge");
-//                }
-
-            @Override
-            protected void updateItem(String status, boolean empty) {
-                super.updateItem(status, empty);
-                if (empty || status == null) {
-                    setGraphic(null);
+            if (computeResourceState.getSelectedResources().size() == 1){
+                if (filePathValidator.isValid(filePathTextField.getText())) {
+                    ComputeResource selectedResource = computeResourceState.getSelectedResources().getFirst();
+                    if (selectedResource.getConfigurationPaths()
+                            .isEmpty()){
+                        ConfigurationPath path = new ConfigurationPath();
+                        path.setConfigurationPath(filePathTextField.getText());
+                        path.setRequiresElevation(false);
+                        selectedResource.getConfigurationPaths().add(path);
+                        path.setComputeResource(selectedResource);
+                        computeResourceRepository.save(selectedResource);
+                        selectedPathsTable.getItems().add(path);
+                    } else {
+                        //Perform other checks
+                    }
                 } else {
-                    pathLabel.setText(status);
-//                        pathLabel.getStyleClass().removeAll("status-online", "status-offline");
-//                        pathLabel.getStyleClass().add("status-" + status.toLowerCase());
-                    setGraphic(pathLabel);
+                    alertUtility.warningAlert("Invalid Path", "The path entered is not a valid system path.");
                 }
+            } else {
+                alertUtility.warningAlert("Incorrect Selection", "One and only one host selection must be made.");
             }
         });
-        pathColumn.prefWidthProperty().bind(selectedPathsTable.widthProperty().subtract(2));
-        selectedPathsTable.getColumns().add(pathColumn);
-        selectedPathsTable.setItems(FXCollections.observableArrayList());
+    }
 
+    private void initializePathTable() {
+        selectedPathsTable.setFocusTraversable(false);
+        TableColumn<ConfigurationPath, String> pathColumn = getConfigurationPathStringTableColumn();
+        pathColumn.prefWidthProperty().bind(selectedPathsTable.widthProperty().multiply(.6));
+        TableColumn<ConfigurationPath, Boolean> elevateColumn = getConfigurationPathElevationrequiredTableColumn();
+        elevateColumn.prefWidthProperty().bind(selectedPathsTable.widthProperty().multiply(.4).subtract(2));
+        selectedPathsTable.getColumns().add(pathColumn);
+        selectedPathsTable.getColumns().add(elevateColumn);
+        selectedPathsTable.setItems(FXCollections.observableArrayList());
+    }
+
+    @NonNull
+    private TableColumn<ConfigurationPath, String> getConfigurationPathStringTableColumn() {
+        TableColumn<ConfigurationPath, String> pathColumn = new TableColumn<>("Path");
+        pathColumn.setCellValueFactory(path -> path.getValue()
+                .configurationPath());
+        return pathColumn;
+    }
+
+    @NonNull
+    private TableColumn<ConfigurationPath, Boolean> getConfigurationPathElevationrequiredTableColumn() {
+        TableColumn<ConfigurationPath, Boolean> privilegeColumn = new TableColumn<>("Privilege");
+        privilegeColumn.setCellValueFactory(path -> path.getValue()
+                .requiresElevation());
+        return privilegeColumn;
     }
 
 }
